tests/invalid/trait/method_call_explicit_ufcs_struct_literal_receiver_safety_gate.facet
struct Job {
  id: unrestricted isize
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (<unrestricted Job as Runner>::run Job { id = 1 })
}
